Got it to read color... but not the right color :(
Got it to read color... but not the right color :(

--- a/ColorSpot App/ColorSpot App/Info.plist
+++ b/ColorSpot App/ColorSpot App/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>R train take me back :(</string>
 </dict>
 </plist>
